update omkring arduino design and implementation

--- a/report/draft.tex
+++ b/report/draft.tex
@@ -46,6 +46,8 @@
 	\input{text/database.tex}
 	\input{text/api.tex}
 	\input{text/ArduinoDesign.tex}
+	\input{text/usingEthernet.tex}
+	\input{text/usingRFID.tex}
 	\input{text/websiteImplementationAndDesign.tex}
 	\input{text/overALLImplementation.tex}
 
@@ -63,6 +65,7 @@
 	
 	\part{Appendix}
 	\begin{appendices}
+	\input{text/oldRuleDesign.tex}
 	\input{text/LightTabel.tex}
 	\end{appendices}
 	
