--- a/report/text/usingEthernet.tex
+++ b/report/text/usingEthernet.tex
@@ -1,4 +1,4 @@
-\section{Using the Ethernet Shield.}
+\subsection{Using the Ethernet Shield.}
 The Ethernet shield is the primary component in accessing the API as it allows for the Arduino to access the web as a client.
 We use the Ethernet shield along with a JSON parser in order to make HTML requests on the web site that contains the system API and decode its responce.
 
