--- a/report/text/usingRFID.tex
+++ b/report/text/usingRFID.tex
@@ -1,4 +1,4 @@
-\section{Using RFID With The Arduino}
+\subsection{Using RFID With The Arduino}
 The Arduino board utilizes the SM130 by sending it commands and receiving replies through Digital Pins 7 and 8.
 These pins are initialized using the library \verb|SoftwareSerial.h|.\\
 \begin{lstlisting}
