--- a/report/text/newGeneralDesignConcepts.tex
+++ b/report/text/newGeneralDesignConcepts.tex
@@ -55,10 +55,10 @@ A rule should be connected to one or more user profiles since the rules otherwis
 To see a quick overview of the different conditions and their name:
 
 \begin{description}
-	\item[Timeperiode] the action can be done in this time period. 
+	\item[Timeperiod] the action can be done in this time period. 
 	\item[Controller on] the action can be done if a specific controller is turn on. 
 	\item[Controller off] the action can be done if a specific controller is turn off. 
-	\item[True] The action can always be taken.
+	\item[True] The action can always be taken. This is actually kind of a time period but there is no time bounds.
 \end{description}
 
 An overview of the actions and their name is listed below:
@@ -82,7 +82,7 @@ The rule's structure is presented in a grammar in listing	\ref{grammar} expresse
 In a nonterminal is en-captured in $<>$ and a terminal is just a word or en-captured in "". 
 Also the grouping is used represented in $()$, the replica symbol is $*$, comments is $(**)$ and alternative is $|$. 
 
-%A rule consist of a name and one of five action and condition sets which determine which actions and conditions can be combined. A rule can have several actions and conditions but only from the same set, see line 1-7. The action set is presented from 9-23 where all has a specific name, some have a specific Controller represented as a number and some has points which is a number. The condition set likewise represented from 9-23 and the condition types are presented from 25-30. There are four types but they each have a specific name. One type has Timestamp, another a Controller, the third only the name and the last is a timeperiod. The timeperiod has with two timestamp and if it is repeatable it has a string representation of the weekdays and a representation of then it is repeatable. 
+A rule consist of a name and one of five action and condition sets which determine which actions and conditions can be combined. A rule can have several actions and conditions but only from the same set, see line 1-7. The action set is presented from 9-23 where all has a specific name, some have a specific Controller represented as a number and some has points which is a number. The condition set likewise represented from 9-23 and the condition types are presented from 25-30. There are Three types but they each have a specific name. One type has a Controller, another only the name 'True' and the last has a timeperiod. The timeperiod has with two timestamps and if it is repeatable it has a string representation of the weekdays and a representation of then it is repeatable. 
 
 \begin{lstlisting}[label=grammar, caption=Grammar of a rule in EBNF]
 <Rule>:= <name> (
