--- a/report/text/newGeneralDesignConcepts.tex
+++ b/report/text/newGeneralDesignConcepts.tex
@@ -18,7 +18,7 @@ One disadvantage about the chore design is that the parent needs to use the webs
 In the system a rule can be many things the following is just a few examples of rules:
 
 \begin{itemize}
-	\item Any permissions can be written as a rule
+	\item Susan has access to use the PC from 15:00 to 17:00 each day.
 	\item The first Monday in a month Peter's points is increased by 100
 	\item Mom and Dad's profiles have unlimited time and unrestricted access to any media
 \end{itemize}
