test chaper i draft

--- a/report/draft.tex
+++ b/report/draft.tex
@@ -50,6 +50,8 @@
 	\input{text/usingRFID.tex}
 	\input{text/websiteImplementationAndDesign.tex}
 	\input{text/overALLImplementation.tex}
+	
+	\input{text/test.tex}
 
 	%Part Perspective
 	\part{Perspective}
