expert test + screenshot der evt skal bruges

--- a/report/kilder.bib
+++ b/report/kilder.bib
@@ -17,7 +17,14 @@ note ={\url{https://github.com/Zucka/girafAdmin/tree/46e19108a6ca0413e2542621255
 }
 
 %% End of Examples %%
-
+@manual{HeuristicEvaluation,
+  author ={Jakob Nielsen},
+  title ={Technology Transfer of Heuristic Evaluation and Usability Inspection},
+  address={URL: \url{http://www.nngroup.com/articles/technology-transfer-of-heuristic-evaluation/}},
+	howpublished = {Website},
+  year ={1995},
+  note ={Looked up: 15-12-2013},
+}
 @MISC{childrenAndNature,
 author = {Children \& Nature Network},
 title = {Children and Nature},
@@ -48,6 +55,13 @@ note ={\url{http://www.biomedcentral.com/1471-2458/13/808}}
   publisher =    {Marko ApS},
   year =         {2001},
   edition =      {3rd edition}
+}
+@Book{DIEB,
+  author =       {David Benyon},
+  title =        {Designing Interactive Systems},
+  publisher =    {Peason},
+  year =         {2010},
+  edition =      {2nd edition}
 }
 @Book{CoPL,
   author =       {Robert W. Sebesta},
