--- a/report/text/test.tex
+++ b/report/text/test.tex
@@ -6,3 +6,39 @@
 \subsection{Results}
 
 \section{Evaluation of the Web Interface}%lisbeth makes this
+There are different ways to evaluate the web interface e.g. an expert or user-based evaluation could be made. We would have preferred to make a user-based evaluation because this give a valuable input from a person who might use the system. However, to make such a sufficient user evaluation then we should find at least people with children which is between 5-14 years old and that would take too much time. A user-based evaluation of the entire MOM would be better than just the website where the user could use it for a week or two before we interview them in the system.
+
+Therefore to only evaluate the web interface we use an expert evaluation called Heuristic evaluation. However, this is being done by a person in the group which have participated in the blackboards design but not the final implementation design of the interface. This is not optimal in this test where the test person(s) should be an usability expert from outside the development group. 
+
+\subsection{Heuristic evaluation in Theory}
+In a Heuristic evaluation the test person(s) look for errors and potential usability errors which can be categorized in 12 item and divided into 3 groups\citep{DIEB}, which is shortly described below:
+\begin{description}
+\item[Learnability] make it ease for the user to learn and remembering the system:
+\begin{itemize}
+	\item Visibility - make it clear for the user which functions are available in the system and show what the system is doing.
+	\item Consistency - be consistent in the design features and let it be similar to other comparable systems %similar systems/håber mening statid er der
+	\item Familiarity - the language and symbols in the system should be familiar to the user.
+	\item Affordance - let objects that look like something be it. E.g. if it looks like a button, it is a button. %pleas find en bedre sætning end 
+	\fixme{'let objects that look like something be it' bedre forslag???}
+\end{itemize}
+
+\item[Effectiveness] is who ease it is for the user to use it and how safe it is to use:
+\begin{itemize}
+	\item Navigation - provide support to enable people to move around. Make clear navigation instructions.
+	\item Control - make it clear who and what is in control, the user should be able to take control. There should be a connection between what happens in the system and what will happen outside of the system. 
+	%is the mapping between control and effect. Relation what happens in system what happens in real life.
+	\item Feedback - give feedback on what have happened after user do an action in the system.
+	\item Recovery - how good it is to recover if the user makes an error. %e.g. user delete profile recover=> no
+	\item Constraints - prevent people from doing inappropriate things in the system. This should be able to prevent serious error.
+\end{itemize}
+
+\item[Accommodation] accommodating differences between and respecting those differences:
+\begin{itemize}
+	\item Flexibility - let there be multiple ways of doing things.%=> dash bord if it worked
+	\item Style - is the design attractive to the user. %who do it looks - attractive stylish???
+	\item Conviviality - be polite and friendly. Do not use aggressive language.
+\end{itemize}
+\end{description}
+Typically the test is done by 1-3 test persons\citep{HeuristicEvaluation}.
+
+\subsection{Evaluation of MOM's Website}
