--- a/report/text/test.tex
+++ b/report/text/test.tex
@@ -1,16 +1,7 @@
-\chapter{Testing}
+\chapter{Testing of the Media-Online Management}
+There are different ways to evaluate the web interface e.g. an expert or user-based evaluation could be made. We would have preferred to make a user-based evaluation because this give a valuable input from a person who might use the system. However, to make such a sufficient user evaluation then we should find at least people with children which is between 5-14 years old and that would take too much time. A user-based evaluation of the entire MOM system would be optimal if the user and his/hers family could try it for a week or two before we interview them about the system. Also a log for our benefit could be made during this time to see how they use it of course with the test persons permission. Therefore to only evaluate the web interface we use an expert evaluation called Heuristic evaluation. 
 
-\section{Systematic test of MOM}
-\subsection{Test cases} %Jakob
-\subsection{Systematic testing}
-\subsection{Results}
-
-\section{Evaluation of the Web Interface}%lisbeth makes this
-There are different ways to evaluate the web interface e.g. an expert or user-based evaluation could be made. We would have preferred to make a user-based evaluation because this give a valuable input from a person who might use the system. However, to make such a sufficient user evaluation then we should find at least people with children which is between 5-14 years old and that would take too much time. A user-based evaluation of the entire MOM would be better than just the website where the user could use it for a week or two before we interview them in the system.
-
-Therefore to only evaluate the web interface we use an expert evaluation called Heuristic evaluation. However, this is being done by a person in the group which have participated in the blackboards design but not the final implementation design of the interface. This is not optimal in this test where the test person(s) should be an usability expert from outside the development group. 
-
-\subsection{Heuristic evaluation in Theory}
+\section{Heuristic evaluation in Theory}
 In a Heuristic evaluation the test person(s) look for errors and potential usability errors which can be categorized in 12 item and divided into 3 groups\citep{DIEB}, which is shortly described below:
 \begin{description}
 \item[Learnability] make it ease for the user to learn and remembering the system:
@@ -39,6 +30,14 @@ In a Heuristic evaluation the test person(s) look for errors and potential usabi
 	\item Conviviality - be polite and friendly. Do not use aggressive language.
 \end{itemize}
 \end{description}
-Typically the test is done by 1-3 test persons\citep{HeuristicEvaluation}.
 
-\subsection{Evaluation of MOM's Website}
+Typically the test is done by 1-3 test persons\citep{HeuristicEvaluation}. The test person should be a usability experts or a software developer with the expertise in a relevant system. To make the test they should have relevant information of the user and a set of task to follow but they are also allowed to make their own.
+
+
+\section{Test cases of MOM} %Jakob
+
+
+\section{Heuristic evaluation of Media-Online Management}
+The evaluation of Media-online Management system is being done by (a) person(s)\fixme{når jeg ved mere (ental/flertal)} in the group which have been highly involved in the development of system. This is not optimal in this test where the test person(s) should be an usability expert from outside the development group.
+
+\subsection{Planning the Test}
