--- a/report/text/test.tex
+++ b/report/text/test.tex
@@ -37,7 +37,17 @@ Typically the test is done by 1-3 test persons\citep{HeuristicEvaluation}. The t
 \section{Test cases of MOM} %Jakob
 
 
-\section{Heuristic evaluation of Media-Online Management}
+\section{Heuristic Evaluation of Media-Online Management}
 The evaluation of Media-online Management system is being done by (a) person(s)\fixme{når jeg ved mere (ental/flertal)} in the group which have been highly involved in the development of system. This is not optimal in this test where the test person(s) should be an usability expert from outside the development group.
 
-\subsection{Planning the Test}
+\subsection{Planning and Conducting the Test}
+-testcases
+-user description
+- find evaluators
+- choose the Heuristics which it should be evaluated against
+
+-is it Individual or group Evaluation
+
+\subsection{Analysing your Results}
+
+\section{Results of the Heuristic Evaluation}
