daemon chapter added to report

--- a/report/draft.tex
+++ b/report/draft.tex
@@ -45,6 +45,7 @@
 	\input{text/requirementsOfMom.tex}
 	\input{text/database.tex}
 	\input{text/api.tex}
+	\input{text/daemon.tex}
 	\input{text/ArduinoDesign.tex}
 	\input{text/usingEthernet.tex}
 	\input{text/usingRFID.tex}
